Xbim.Geometry.Engine.Native/include/xbim_geometry_api.h

typedef struct XbimContext_*        XbimContextHandle;
typedef struct XbimShape_*          XbimShapeHandle;
typedef struct XbimLocation_*       XbimLocationHandle;
typedef struct XbimCurve_*          XbimCurveHandle;
typedef struct XbimCurve2d_*        XbimCurve2dHandle;
typedef struct XbimSurface_*        XbimSurfaceHandle;
typedef struct XbimAdvancedBrepBuilder_* XbimAdvancedBrepBuilderHandle;
typedef int XbimResult;
/*
 * Signature for a logging callback supplied by managed code.
 * The native library invokes this to forward log messages.
 *
 *   level – one of the XBIM_LOG_* constants above
 *   msg   – null-terminated UTF-8 message; valid only for the duration of the call
 */
typedef void (XBIM_CALL *XbimLogCallback)(int level, const char* msg);
/*
 * Build a 2D polynomial curve defined by separate X and Y coefficient vectors:
 *   X(u) = sum(coeffsX[i] * u^i), Y(u) = sum(coeffsY[i] * u^i)
 *
 * coeffsX/coeffsY – coefficient arrays (index 0 = constant, index n = highest power)
 * numCoeffsX/numCoeffsY – number of coefficients in each array
 * placementX/Y – origin of the local coordinate system
 * dirX/dirY – reference direction (X axis) of the local coordinate system
 * firstParam/lastParam – parameter domain bounds
 *
 * Returns a 2D curve handle (Geom2d_BoundedCurve).
 */
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve2d_build_polynomial(
    XbimContextHandle   ctx,
    const double*       coeffsX,
    int                 numCoeffsX,
    const double*       coeffsY,
    int                 numCoeffsY,
    double              placementX,
    double              placementY,
    double              dirX,
    double              dirY,
    double              firstParam,
    double              lastParam,
    XbimCurve2dHandle*  outHandle);
/*
 * Build a 3D polynomial curve as a B-spline approximation.
 * Same parameters as xbim_curve2d_build_polynomial, but evaluates the 2D polynomial
 * curve, samples it, and fits a 3D B-spline in the XY plane (z=0).
 *
 * Returns a 3D curve handle (Geom_BSplineCurve).
 */
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve_build_polynomial(
    XbimContextHandle   ctx,
    const double*       coeffsX,
    int                 numCoeffsX,
    const double*       coeffsY,
    int                 numCoeffsY,
    double              placementX,
    double              placementY,
    double              dirX,
    double              dirY,
    double              firstParam,
    double              lastParam,
    XbimCurveHandle*    outHandle);
/*
 * Get the parametric range of a 2D curve.
 *   outFirst/outLast – receive the first and last parameter values
 */
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve2d_parameters(
    XbimCurve2dHandle handle,
    double*           outFirst,
    double*           outLast);
/*
 * Compute the arc length of a 2D curve over its full parameter range.
 */
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve2d_length(
    XbimCurve2dHandle handle,
    double*           outLength);
/*
 * Evaluate a point on the 2D curve at parameter u.
 */
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve2d_value(
    XbimCurve2dHandle handle,
    double            u,
    double*           outX, double* outY);
/*
 * Evaluate point and first derivative at parameter u on a 2D curve.
 *   outPx/outPy – point coordinates
 *   outDx/outDy – first derivative vector
 */
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve2d_d1(
    XbimCurve2dHandle handle,
    double            u,
    double*           outPx, double* outPy,
    double*           outDx, double* outDy);
/*
 * Evaluate point, first derivative, and second derivative at parameter u on a 2D curve.
 *   outPx/outPy     – point coordinates
 *   outD1x/outD1y   – first derivative vector
 *   outD2x/outD2y   – second derivative vector
 */
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve2d_d2(
    XbimCurve2dHandle handle,
    double            u,
    double*           outPx,  double* outPy,
    double*           outD1x, double* outD1y,
    double*           outD2x, double* outD2y);
/*
 * Project a 2D point onto a curve and return the parameter.
 * Uses Geom2dLib_Tool::Parameter.
 */
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve2d_project_point(
    XbimContextHandle   ctx,
    XbimCurve2dHandle   curveHandle,
    double px, double py,
    double tolerance,
    double* outParam);
/*
 * Reverse the direction of a 2D curve in-place.
 */
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve2d_reverse(XbimCurve2dHandle handle);
/*
 * Apply a 2D placement transform to a curve in-place.
 * Transforms from the global origin/X-direction to the given placement.
 * placementX/Y – origin of the local coordinate system
 * dirX/dirY – reference direction (X axis) of the local coordinate system
 */
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve2d_transform(
    XbimCurve2dHandle   handle,
    double              placementX,
    double              placementY,
    double              dirX,
    double              dirY);
/*
 * Translate a 2D curve so that its start point lies at the origin.
 */
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve2d_move_to_origin(
    XbimCurve2dHandle   handle);
/*
 * Translate the start point to the origin AND rotate so the starting
 * tangent aligns with the positive X axis.
 */
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve2d_align_to_origin(
    XbimCurve2dHandle   handle);
/*
 * Translate a B-spline 2D curve's poles in X so that the start point's
 * X coordinate equals targetX. Used to align the height function's
 * distance-along axis with the horizontal projection.
 */
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve2d_translate_start_to_x(
    XbimCurve2dHandle   handle,
    double              targetX);
/*
 * Join an array of bounded 2D curves into a single B-spline.
 * Spirals, polynomials, and conics are approximated; other bounded curves are
 * joined via Geom2dConvert_CompCurveToBSplineCurve. Gaps between segments
 * are filled with line segments up to the specified tolerance.
 *
 * curves     – array of XbimCurve2dHandle (each must be a bounded curve)
 * numCurves  – number of curves in the array
 * tolerance  – gap-filling tolerance
 */
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve2d_build_composite_bspline(
    XbimContextHandle   ctx,
    XbimCurve2dHandle*  curves,
    int                 numCurves,
    double              tolerance,
    XbimCurve2dHandle*  outHandle);
/*
 * Build a 2D offset curve from a basis 2D curve and an offset distance.
 * Uses Geom2d_OffsetCurve(basis, offset).
 *
 *   ctx         – a valid context handle (used for logging; may be NULL)
 *   basisHandle – the 2D basis curve to offset
 *   offset      – offset distance (positive = left of curve direction)
 *   outHandle   – receives the new 2D offset curve handle
 *
 * Returns XBIM_OK on success.
 */
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve2d_build_offset(
    XbimContextHandle  ctx,
    XbimCurve2dHandle  basisHandle,
    double             offset,
    XbimCurve2dHandle* outHandle);
/*
 * Build a 3D gradient curve from a horizontal 2D projection and a height
 * function (also 2D). The resulting 3D curve evaluates as:
 *   P(u) = (horizontal.X(u), horizontal.Y(u), heightFunction.Y(u))
 *
 * Used for road/railway vertical alignment profiles (IfcGradientCurve).
 * Both input curves must be valid XbimCurve2dHandles.
 */
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve_build_gradient(
    XbimContextHandle   ctx,
    XbimCurve2dHandle   horizontalHandle,
    XbimCurve2dHandle   heightFunctionHandle,
    XbimCurveHandle*    outHandle);
/*
 * Build a segmented reference curve from a gradient curve and superelevation
 * segments. Each superelevation segment is a 2D curve paired with a location
 * transform encoding the segment's starting superelevation and cant tilt.
 *
 *   ctx                 – context handle for logging
 *   gradientCurveHandle – base gradient curve (must wrap a Geom_GradientCurve)
 *   segmentCurves       – array of XbimCurve2dHandle for superelevation segments
 *   segmentLocations    – array of XbimLocationHandle for segment placements
 *   numSegments         – number of segments (length of both arrays)
 *   endPointLocation    – optional end point location (NULL for no end point)
 *   outHandle           – receives the new curve handle on success
 */
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve_build_segmented_reference(
    XbimContextHandle   ctx,
    XbimCurveHandle     gradientCurveHandle,
    XbimCurve2dHandle*  segmentCurves,
    XbimLocationHandle* segmentLocations,
    int                 numSegments,
    XbimLocationHandle  endPointLocation,
    XbimCurveHandle*    outHandle);
/*
 * Query superelevation and cant tilt at a given parameter on a segmented
 * reference curve.
 *
 *   curveHandle       – must wrap a Geom_SegmentedReferenceCurve
 *   parameter         – distance-along parameter
 *   outSuperElevation – receives the superelevation value
 *   outCantTilt       – receives the cant tilt angle (radians)
 */
XBIM_EXPORT XbimResult XBIM_CALL xbim_curve_get_superelevation_and_tilt(
    XbimCurveHandle curveHandle,
    double          parameter,
    double*         outSuperElevation,
    double*         outCantTilt);
/*
 * Build a wire from an array of 2D bounded curves.
 * Edges are created via BRepBuilderAPI_MakeEdge2d, vertices are shared between
 * consecutive edges, 3D curves are generated via BRepLib::BuildCurve3d,
 * and the wire is closed if the first and last points are within gapSize.
 *
 * This matches the legacy NWireFactory::BuildWire(TColGeom2d_SequenceOfBoundedCurve)
 * approach for building profile wires from 2D curve segments.
 */
XBIM_EXPORT XbimResult XBIM_CALL xbim_wire_build_from_2d_curves(
    XbimContextHandle   ctx,
    XbimCurve2dHandle*  curves,
    int                 numCurves,
    double              tolerance,
    double              gapSize,
    XbimShapeHandle*    outWire);
/*
 * Create an advanced BRep builder that accumulates IFC face data and builds
 * the full shell topology natively with proper vertex/edge sharing.
 */
XBIM_EXPORT XbimResult XBIM_CALL xbim_advanced_brep_create(
    XbimContextHandle ctx,
    double tolerance,
    XbimAdvancedBrepBuilderHandle* outBuilder);
/*
 * Pre-register a vertex by IFC entity label and coordinates.
 * Vertices with the same label are shared across edges.
 */
XBIM_EXPORT XbimResult XBIM_CALL xbim_advanced_brep_add_vertex(
    XbimAdvancedBrepBuilderHandle builder,
    int vertexLabel,
    double x, double y, double z);
/*
 * Register an edge curve geometry by IFC entity label.
 * The curve is used when building edges during the build phase.
 */
XBIM_EXPORT XbimResult XBIM_CALL xbim_advanced_brep_add_edge_curve(
    XbimAdvancedBrepBuilderHandle builder,
    int edgeLabel,
    XbimCurveHandle curveHandle);
/*
 * Begin a new face with the given surface and sameSense flag.
 * Must be followed by bound/edge calls and ended with end_face.
 */
XBIM_EXPORT XbimResult XBIM_CALL xbim_advanced_brep_begin_face(
    XbimAdvancedBrepBuilderHandle builder,
    XbimSurfaceHandle surfaceHandle,
    int sameSense);
/*
 * Begin a new bound (wire loop) within the current face.
 * isOuter: nonzero if this is the outer bound.
 * orientation: nonzero if the bound has positive orientation.
 */
XBIM_EXPORT XbimResult XBIM_CALL xbim_advanced_brep_begin_bound(
    XbimAdvancedBrepBuilderHandle builder,
    int isOuter,
    int orientation);
/*
 * Add an oriented edge to the current bound.
 * edgeLabel matches a previously registered edge curve.
 * startVertexLabel/endVertexLabel match registered vertices.
 * sameSense: nonzero if the edge traversal matches its curve direction.
 */
XBIM_EXPORT XbimResult XBIM_CALL xbim_advanced_brep_add_bound_edge(
    XbimAdvancedBrepBuilderHandle builder,
    int edgeLabel,
    int startVertexLabel,
    int endVertexLabel,
    int sameSense);
/*
 * End the current bound (wire loop).
 */
XBIM_EXPORT XbimResult XBIM_CALL xbim_advanced_brep_end_bound(
    XbimAdvancedBrepBuilderHandle builder);
/*
 * End the current face.
 */
XBIM_EXPORT XbimResult XBIM_CALL xbim_advanced_brep_end_face(
    XbimAdvancedBrepBuilderHandle builder);
/*
 * Build the advanced BRep shell from all accumulated data and return
 * it as a solid shape. Performs vertex/edge deduplication, wire
 * construction, face building, shell assembly and shell-to-solid
 * conversion with orientation checking.
 */
XBIM_EXPORT XbimResult XBIM_CALL xbim_advanced_brep_build(
    XbimAdvancedBrepBuilderHandle builder,
    XbimShapeHandle* outHandle);
/*
 * Create a visual representation of an IFC grid by sweeping a small
 * rectangular cross-section (75mm x 1mm) along each grid axis curve.
 *
 * The caller builds 2D curves from the IFC grid's U, V, and W axes
 * and passes them as three arrays. The function computes curve
 * intersections to determine the grid extent, trims unbounded lines
 * to that extent, converts each curve to 3D, and sweeps a rectangular
 * profile along each to produce a compound of solids.
 *
 *   ctx            - a valid context handle (used for logging; may be NULL)
 *   uCurves        - array of 2D curve handles for U-axis curves
 *   uCount         - number of U-axis curves
 *   vCurves        - array of 2D curve handles for V-axis curves
 *   vCount         - number of V-axis curves
 *   wCurves        - array of 2D curve handles for W-axis curves
 *   wCount         - number of W-axis curves
 *   precision      - model precision tolerance
 *   oneMillimeter  - length of one millimetre in model units
 *   outHandle      - receives the compound shape handle
 *
 * Returns XBIM_OK on success.
 */
XBIM_EXPORT XbimResult XBIM_CALL xbim_grid_create(
    XbimContextHandle        ctx,
    const XbimCurve2dHandle* uCurves, int uCount,
    const XbimCurve2dHandle* vCurves, int vCount,
    const XbimCurve2dHandle* wCurves, int wCount,
    double                   precision,
    double                   oneMillimeter,
    XbimShapeHandle*         outHandle);