Xbim.Geometry.Engine.Interop/Internal/XbimGeometryNativeApi.cs


        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve2d_build_polynomial(
            NativeContextHandle ctx,
            [MarshalAs(UnmanagedType.LPArray)] double[] coeffsX,
            int numCoeffsX,
            [MarshalAs(UnmanagedType.LPArray)] double[] coeffsY,
            int numCoeffsY,
            double placementX, double placementY,
            double dirX, double dirY,
            double firstParam, double lastParam,
            out NativeCurve2dHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve_build_polynomial(
            NativeContextHandle ctx,
            [MarshalAs(UnmanagedType.LPArray)] double[] coeffsX,
            int numCoeffsX,
            [MarshalAs(UnmanagedType.LPArray)] double[] coeffsY,
            int numCoeffsY,
            double placementX, double placementY,
            double dirX, double dirY,
            double firstParam, double lastParam,
            out NativeCurveHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve2d_parameters(
            NativeCurve2dHandle handle,
            out double outFirst,
            out double outLast);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve2d_length(
            NativeCurve2dHandle handle,
            out double outLength);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve2d_value(
            NativeCurve2dHandle handle,
            double u,
            out double outX, out double outY);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve2d_d1(
            NativeCurve2dHandle handle,
            double u,
            out double outPx, out double outPy,
            out double outDx, out double outDy);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve2d_d2(
            NativeCurve2dHandle handle,
            double u,
            out double outPx, out double outPy,
            out double outD1x, out double outD1y,
            out double outD2x, out double outD2y);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve2d_project_point(
            NativeContextHandle ctx,
            NativeCurve2dHandle curveHandle,
            double px, double py,
            double tolerance,
            out double outParam);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve2d_reverse(NativeCurve2dHandle handle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve2d_transform(
            NativeCurve2dHandle handle,
            double placementX, double placementY,
            double dirX, double dirY);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve2d_move_to_origin(
            NativeCurve2dHandle handle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve2d_align_to_origin(
            NativeCurve2dHandle handle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve2d_translate_start_to_x(
            NativeCurve2dHandle handle,
            double targetX);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve2d_build_composite_bspline(
            NativeContextHandle ctx,
            [MarshalAs(UnmanagedType.LPArray)] IntPtr[] curves,
            int numCurves,
            double tolerance,
            out NativeCurve2dHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve2d_build_offset(
            NativeContextHandle ctx,
            NativeCurve2dHandle basisHandle,
            double offset,
            out NativeCurve2dHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve_build_gradient(
            NativeContextHandle ctx,
            NativeCurve2dHandle horizontalHandle,
            NativeCurve2dHandle heightFunctionHandle,
            out NativeCurveHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve_build_segmented_reference(
            NativeContextHandle ctx,
            NativeCurveHandle gradientCurveHandle,
            [MarshalAs(UnmanagedType.LPArray)] IntPtr[] segmentCurves,
            [MarshalAs(UnmanagedType.LPArray)] IntPtr[] segmentLocations,
            int numSegments,
            NativeLocationHandle endPointLocation,
            out NativeCurveHandle outHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_curve_get_superelevation_and_tilt(
            NativeCurveHandle curveHandle,
            double parameter,
            out double outSuperElevation,
            out double outCantTilt);

        #endregion

        #region Wire from 2D Curves

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_wire_build_from_2d_curves(
            NativeContextHandle ctx,
            [MarshalAs(UnmanagedType.LPArray)] IntPtr[] curves,
            int numCurves,
            double tolerance,
            double gapSize,
            out NativeShapeHandle outWire);

        #endregion

        #region Advanced BRep Builder

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_advanced_brep_create(
            NativeContextHandle ctx,
            double tolerance,
            out NativeAdvancedBrepBuilderHandle outBuilder);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_advanced_brep_add_vertex(
            NativeAdvancedBrepBuilderHandle builder,
            int vertexLabel,
            double x, double y, double z);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_advanced_brep_add_edge_curve(
            NativeAdvancedBrepBuilderHandle builder,
            int edgeLabel,
            NativeCurveHandle curveHandle);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_advanced_brep_begin_face(
            NativeAdvancedBrepBuilderHandle builder,
            NativeSurfaceHandle surfaceHandle,
            int sameSense);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_advanced_brep_begin_bound(
            NativeAdvancedBrepBuilderHandle builder,
            int isOuter,
            int orientation);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_advanced_brep_add_bound_edge(
            NativeAdvancedBrepBuilderHandle builder,
            int edgeLabel,
            int startVertexLabel,
            int endVertexLabel,
            int sameSense);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_advanced_brep_end_bound(
            NativeAdvancedBrepBuilderHandle builder);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_advanced_brep_end_face(
            NativeAdvancedBrepBuilderHandle builder);

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_advanced_brep_build(
            NativeAdvancedBrepBuilderHandle builder,
            out NativeShapeHandle outHandle);

        #endregion

        #region Grid Operations

        [DllImport(Lib, CallingConvention = CC)]
        internal static extern int xbim_grid_create(
            NativeContextHandle ctx,
            [MarshalAs(UnmanagedType.LPArray)] IntPtr[] uCurves, int uCount,
            [MarshalAs(UnmanagedType.LPArray)] IntPtr[] vCurves, int vCount,
            [MarshalAs(UnmanagedType.LPArray)] IntPtr[] wCurves, int wCount,
            double precision,
            double oneMillimeter,
            out NativeShapeHandle outHandle);

        #endregion
    }

    /// <summary>
    /// Managed delegate matching the native XbimLogCallback signature.
    /// Must be kept alive (prevent GC) while the native code may invoke it.
    /// </summary>
    [UnmanagedFunctionPointer(CallingConvention.StdCall)]
    internal delegate void XbimLogCallback(int level, [MarshalAs(UnmanagedType.LPStr)] string message);
}
